<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/principalField"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/principal"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/interestRate"
        android:layout_width="171dp"
        android:layout_height="35dp"
        android:text="@string/interestRate"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principalField"
        app:layout_constraintVertical_bias="0.98"
        tools:text="@string/interestRate" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:indeterminate="false"
        android:max="2000"
        android:progress="1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principalField"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:text="@string/seekBarValue"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/loanTerm"
        android:layout_width="113dp"
        android:layout_height="59dp"
        android:text="@string/loanTerm"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.218" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="145dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toTopOf="@+id/solution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintVertical_bias="0.24">

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/years1" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/years2" />

        <RadioButton
            android:id="@+id/radioButton30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/years3" />
    </RadioGroup>

    <TextView
        android:id="@+id/taxes"
        android:layout_width="178dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:text="@string/TaxesAndInsurance"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanTerm"
        app:layout_constraintVertical_bias="0.326" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:hint="check to include"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toEndOf="@+id/taxes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="132dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:onClick="onClick"
        android:text="@string/Calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <TextView
        android:id="@+id/payments"
        android:layout_width="182dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/monthlyPayment"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/solution"
        android:layout_width="151dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/payments" />
</androidx.constraintlayout.widget.ConstraintLayout>